@@ -1,5 +1,5 @@
 /*
- * $Id: vldap.c,v 1.15.2.1 2006-01-17 18:50:22 tomcollins Exp $
+ * $Id: vldap.c,v 1.15.2.2 2006-12-16 08:11:45 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -909,6 +909,14 @@ int vauth_setpw( struct vqpasswd *inpw, char *domain ) {
 #ifdef SQWEBMAIL_PASS
     vget_assign(domain, NULL, 0, &uid, &gid );
     vsqwebmail_pass( inpw->pw_dir, inpw->pw_passwd, uid, gid);
+#endif
+
+#ifdef ONCHANGE_SCRIPT
+    if( allow_onchange ) {
+       /* tell other programs that data has changed */
+       snprintf ( onchange_buf , MAX_BUFF , "%s@%s" , inpw->pw_name , domain ) ;
+       call_onchange ( "mod_user" ) ;
+       }
 #endif
 
     return VA_SUCCESS;
