@@ -1,5 +1,5 @@
 /*
- * $Id: vpalias.c,v 1.6.2.10 2006-11-26 18:55:52 tomcollins Exp $
+ * $Id: vpalias.c,v 1.6.2.11 2006-12-16 08:11:45 rwidmer Exp $
  * Copyright (C) 2000-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -147,6 +147,15 @@ int valias_insert( char *alias, char *domain, char *alias_line)
 
     fprintf(fs, "%s\n", alias_line);
     fclose(fs);
+
+#ifdef ONCHANGE_SCRIPT
+    if( allow_onchange ) {
+       /* tell other programs that data has changed */
+       snprintf ( onchange_buf , MAX_BUFF , "%s@%s - %s" , alias , domain , alias_line ) ;
+       call_onchange ( "valias_insert" ) ;
+       }
+#endif
+
     return(0);
 }
 
@@ -174,6 +183,15 @@ int valias_delete( char *alias, char *domain)
 	printf("invalid domain, not in qmail assign file\n");
 	return(-1);
     }
+
+#ifdef ONCHANGE_SCRIPT
+    if( allow_onchange ) {
+       /* tell other programs that data has changed */
+       snprintf ( onchange_buf , MAX_BUFF , "%s@%s" , alias , domain ) ;
+       call_onchange ( "valias_delete" ) ;
+       }
+#endif
+
     strncat(Dir, "/.qmail-", sizeof(Dir)-strlen(Dir)-1);
     i = strlen(Dir);
     for (p = alias; (i < (int)sizeof(Dir) - 1) && (*p != '\0'); p++)
